tests/api/reference/negative/01-block-scope.asm
{
    let hidden = 1
}

emit.u8(hidden)
